--- a/.github/workflows/data-retrieval-ci.yml
+++ b/.github/workflows/data-retrieval-ci.yml
@@ -30,7 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest and record test coverage
       run: |
-        pytest --cov=. test_*.py
+        python3 -m coverage run -m pytest test_*.py
         coverage report -m
 
   linting:
