--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ types-Flask==1.1.6
 types-Jinja2==2.11.9
 types-MarkupSafe==1.1.10
 types-pyOpenSSL==24.1.0.20240722
+types-python-dateutil==2.9.0.20241206
+types-pytz==2025.1.0.20250318
 types-requests==2.32.0.20250306
 types-setuptools==76.0.0.20250313
 types-Werkzeug==1.0.9
