--- a/.github/workflows/data-retrieval-ci.yml
+++ b/.github/workflows/data-retrieval-ci.yml
@@ -31,8 +31,19 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest and record test coverage
       run: |
-        python3 -m coverage run -m pytest test_*.py
-        coverage report -m
+        set -o pipefail
+        python3 -m coverage run -m pytest test_*.py | tee test_results.txt
+        coverage report -m | tee coverage.txt
+    - name: Upload test results as a GitHub artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: test_results_incomplete
+        path: test_results.txt
+    - name: Upload coverage as a GitHub artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage_incomplete
+        path: coverage.txt
 
   linting:
 
@@ -52,9 +63,15 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
+        set -o pipefail
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --max-complexity=10 --statistics --ignore=E501
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics | tee linting.txt
+        flake8 . --count --max-complexity=10 --statistics --ignore=E501 | tee -a linting.txt
+    - name: Upload linting results as a GitHub artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: linting_incomplete
+        path: linting.txt
 
   type-checking:
 
@@ -70,8 +87,43 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mypy
+        pip install mypy types-fpdf2
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Type checking with mypy
       run: |
-        python3 -m mypy .
+        set -o pipefail
+        python3 -m mypy . | tee type_checking.txt
+    - name: Upload type checking as a GitHub artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: type_checking_incomplete
+        path: type_checking.txt
+
+  generate-pdf-report:
+
+    runs-on: ubuntu-latest
+    needs: [testing-and-coverage, linting, type-checking]
+    if: always()
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.11"
+        cache: 'pip'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install fpdf2
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Download results from previous jobs
+      uses: actions/download-artifact@v4
+    - name: Generate PDF report
+      run: |
+        python3 generate_pdf_report.py
+    - name: Upload PDF report as a GitHub artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: data-analytics-testing-report
+        path: testing_report.pdf
