--- a/.github/workflows/data-retrieval-ci.yml
+++ b/.github/workflows/data-retrieval-ci.yml
@@ -68,7 +68,7 @@ jobs:
         set -o pipefail
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics | tee linting.txt
-        flake8 . --count --max-complexity=10 --statistics --ignore=E501,C901,W504  | tee -a linting.txt
+        flake8 . --count --max-complexity=10 --statistics --ignore=E501,C901,W504,E226 | tee -a linting.txt
     - name: Upload linting results as a GitHub artifact
       if: always()
       uses: actions/upload-artifact@v4
